@@ -243,6 +243,7 @@ AC_DEFUN([gl_FILE_LIST], [
   lib/wchar.in.h
   lib/xsize.h
   m4/00gnulib.m4
+  m4/absolute-header.m4
   m4/alloca.m4
   m4/errno_h.m4
   m4/extensions.m4
