@@ -2,6 +2,8 @@
 
 	* Gnulib update.
 	* GLVM update.
+	* build-aux/glew.m4, build-aux/cvl.m4, build-aux/qt4.m4, configure.ac,
+	src/Makefile.am: Improve library detection.
 
 2008-12-03  Martin Lambers <marlam@marlam.de>
 
